# cookiecutter-cpplib-tools

./: .gitignore  .travis.ci  Pipfile  README.md  TODO  cookiecutter.json  tox.ini
hooks/: post_gen_project.py
tests/: test_template.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  Doxyfile  LICENSE  LICENSE.GNU General Public License v3  Makefile  README.rst
{{cookiecutter.project_slug}}/demos/: CMakeLists.txt  demo_message.cpp
{{cookiecutter.project_slug}}/docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  installation.rst  namespaces.rst  usage.rst
{{cookiecutter.project_slug}}/include/{{cookiecutter.library_name}}/: {{cookiecutter.library_name}}.hpp
{{cookiecutter.project_slug}}/src/: {{cookiecutter.library_name}}.cpp
{{cookiecutter.project_slug}}/tests/: CMakeLists.txt  GoogleTest-CMakeLists.txt.in  {{cookiecutter.library_name}}.t.cpp
